[gd_scene load_steps=2 format=2]

[ext_resource path="res://Battle/UI/Member.gd" type="Script" id=1]

[node name="Member" type="ColorRect"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 27.0
margin_right = 176.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 14 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameLabel" type="Label" parent="HBoxContainer"]
margin_right = 105.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
text = "Name"
align = 2

[node name="Spacer" type="Label" parent="HBoxContainer"]
margin_left = 109.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 11.0

[node name="HPCurrentLabel" type="Label" parent="HBoxContainer"]
margin_left = 113.0
margin_right = 137.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "9999"
align = 2

[node name="Slash" type="Label" parent="HBoxContainer"]
margin_left = 141.0
margin_right = 148.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "/"

[node name="HPMaxLabel" type="Label" parent="HBoxContainer"]
margin_left = 152.0
margin_right = 176.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "9999"
